--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4698,6 +4698,23 @@
   langid = {english}
 }
 
+@article{kumarathungeAcclimationAdaptationComponents2019,
+  title = {Acclimation and Adaptation Components of the Temperature Dependence of Plant Photosynthesis at the Global Scale},
+  author = {Kumarathunge, Dushan P. and Medlyn, Belinda E. and Drake, John E. and Tjoelker, Mark G. and Aspinwall, Michael J. and Battaglia, Michael and Cano, Francisco J. and Carter, Kelsey R. and Cavaleri, Molly A. and Cernusak, Lucas A. and Chambers, Jeffrey Q. and Crous, Kristine Y. and De Kauwe, Martin G. and Dillaway, Dylan N. and Dreyer, Erwin and Ellsworth, David S. and Ghannoum, Oula and Han, Qingmin and Hikosaka, Kouki and Jensen, Anna M. and Kelly, Jeff W. G. and Kruger, Eric L. and Mercado, Lina M. and Onoda, Yusuke and Reich, Peter B. and Rogers, Alistair and Slot, Martijn and Smith, Nicholas G. and Tarvainen, Lasse and Tissue, David T. and Togashi, Henrique F. and Tribuzy, Edgard S. and Uddling, Johan and Vårhammar, Angelica and Wallin, Göran and Warren, Jeffrey M. and Way, Danielle A.},
+  date = {2019-04},
+  journaltitle = {New Phytol},
+  volume = {222},
+  number = {2},
+  pages = {768--784},
+  issn = {0028646X},
+  doi = {10.1111/nph.15668},
+  url = {http://doi.wiley.com/10.1111/nph.15668},
+  urldate = {2020-07-17},
+  abstract = {The temperature response of photosynthesis is one of the key factors determining predicted responses to warming in global vegetation models (GVMs). The response may vary geographically, owing to genetic adaptation to climate, and temporally, as a result of acclimation to changes in ambient temperature. Our goal was to develop a robust quantitative global model representing acclimation and adaptation of photosynthetic temperature responses.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\YI6KP4YW\\Kumarathunge et al. - 2019 - Acclimation and adaptation components of the tempe.pdf}
+}
+
 @article{kumarathungeAcclimationAdaptationComponents2019a,
   title = {Acclimation and Adaptation Components of the Temperature Dependence of Plant Photosynthesis at the Global Scale},
   author = {Kumarathunge, Dushan P. and Medlyn, Belinda E. and Drake, John E. and Tjoelker, Mark G. and Aspinwall, Michael J. and Battaglia, Michael and Cano, Francisco J. and Carter, Kelsey R. and Cavaleri, Molly A. and Cernusak, Lucas A. and Chambers, Jeffrey Q. and Crous, Kristine Y. and De Kauwe, Martin G. and Dillaway, Dylan N. and Dreyer, Erwin and Ellsworth, David S. and Ghannoum, Oula and Han, Qingmin and Hikosaka, Kouki and Jensen, Anna M. and Kelly, Jeff W. G. and Kruger, Eric L. and Mercado, Lina M. and Onoda, Yusuke and Reich, Peter B. and Rogers, Alistair and Slot, Martijn and Smith, Nicholas G. and Tarvainen, Lasse and Tissue, David T. and Togashi, Henrique F. and Tribuzy, Edgard S. and Uddling, Johan and Vårhammar, Angelica and Wallin, Göran and Warren, Jeffrey M. and Way, Danielle A.},
@@ -9916,6 +9933,25 @@
   doi = {10.2307/1307692},
   abstract = {Humidity levels control directly the rate of transpirational water loss and stomatal aperture of plants. Thus, humidity regulates photosynthetic rates, tissue temperatures, plant water potentials, and concentrations of Ca in certain tissues. Humidity also controls water taken in by tissues through condensation and direct vapor uptake.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\3KV9YMPR\\Tibbitts - 1979 - Humidity and Plants.pdf}
+}
+
+@article{tiwariPhotosyntheticQuantumEfficiency2021,
+  title = {Photosynthetic Quantum Efficiency in South-Eastern {{Amazonian}} Trees May Be Already Affected by Climate Change},
+  author = {Tiwari, Rakesh and Gloor, Emanuel and da Cruz, Wesley Jonatar A. and Marimon, Beatriz Schwantes and Marimon-Junior, Ben Hur and Reis, Simone M. and de Souza, Igor Araújo and Krause, Heinrich G. and Slot, Martijn and Winter, Klaus and Ashley, David and Béu, Raiane G. and Borges, Camila S. and Cunha, Maura Da and Fauset, Sophie and Ferreira, Laura D. S. and Gonçalves, Maélly Dállet A. and Lopes, Thaynara T. and Marques, Eduardo Q. and Mendonça, Natalia G. and Mendonça, Natana G. and Noleto, Pedro T. and de Oliveira, Carla Heloísa L. and Oliveira, Milene A. and Pireda, Saulo and Prestes, Nayane C. C. dos Santos and Santos, Denilson M. and Santos, Eduarda B. and da Silva, Ediméia Laura S. and de Souza, Izabel A. and de Souza, Luciana J. and Vitória, Angela P. and Foyer, Christine H. and Galbraith, David},
+  date = {2021},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {44},
+  number = {7},
+  pages = {2428--2439},
+  issn = {1365-3040},
+  doi = {10.1111/pce.13770},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/pce.13770},
+  urldate = {2021-08-22},
+  abstract = {Tropical forests are experiencing unprecedented high-temperature conditions due to climate change that could limit their photosynthetic functions. We studied the high-temperature sensitivity of photosynthesis in a rainforest site in southern Amazonia, where some of the highest temperatures and most rapid warming in the Tropics have been recorded. The quantum yield (Fv/Fm) of photosystem II was measured in seven dominant tree species using leaf discs exposed to varying levels of heat stress. T50 was calculated as the temperature at which Fv/Fm was half the maximum value. T5 is defined as the breakpoint temperature, at which Fv/Fm decline was initiated. Leaf thermotolerance in the rapidly warming southern Amazonia was the highest recorded for forest tree species globally. T50 and T5 varied between species, with one mid-storey species, Amaioua guianensis, exhibiting particularly high T50 and T5 values. While the T50 values of the species sampled were several degrees above the maximum air temperatures experienced in southern Amazonia, the T5 values of several species are now exceeded under present-day maximum air temperatures.},
+  langid = {english},
+  keywords = {Amazon forest,high-temperature tolerance,photosynthesis,PSII maximum quantum yield,tropical evergreen trees},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.13770},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\54SY29FX\\Tiwari et al. - 2021 - Photosynthetic quantum efficiency in south-eastern.pdf;C\:\\Users\\Me\\Zotero\\storage\\XQBIQQRL\\pce.html}
 }
 
 @article{trenberthGlobalWarmingChanges2014b,
