--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -121,7 +121,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 (2) leaf temperature ($T_{leaf}$);
 (3) the leaf traits that most strongly influence $T_{leaf}$;
 (4) leaf metabolism and gas exchange, including stomatal conductance, photosynthesis, respiration, and volatile organic compound (VOC) production; and 
-(5) the size-structuring of whole-tree and ecosystem function.
+(5) whole-tree and ecosystem ecology.
 *We then consider the implications for understanding forest responses to global change, including how these responses scale across space and time.* 
 
 ![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests with dense canopies during daytime growing season conditions.** Patterns summarized here tend to be weaker, or sometimes reversed, under more open canopies, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that observations have shown increases both higher and lower in the canopy  [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/Screen Shot 2021-07-19 at 1.10.17 PM.png)
@@ -314,7 +314,7 @@ Leaf thermal tolerances are more closely adapted to microclimate than macroclima
 
 **The vertical structuring of leaf isoprene emissions may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average.** Isoprene gas emission from tree leaves is associated with photosynthetic thermal tolerance [@taylorCapacityEmitIsoprene2019; @sharkeyIsopreneEmissionPlants2008], and within species, emission rates tend to increase toward brighter and hotter microenvironments [@niinemetsEmissionFactorVolatile2010]. Across landscapes, emitting species increase in relative abundance toward hotter climates, exceeding half of trees in warm tropical forests [@taylorIsopreneEmissionStructures2018a]. In contrast, a recent inventory in an Amazon forest showed that both the abundance of emitting species and average emission rates were highest in the mid-canopy region instead of the hotter and brighter upper canopy [@taylorNewFieldInstrument2021]. This observation is consistent with the hypothesis that temperature sensitive isoprene emissions enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [@sharkeyIsopreneEmissionPlants2008], due to the sun's passage across a dynamically structured canopy surface. This review focuses primarily on variation in mean conditions across the vertical profile, but future work should seek to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary through the canopy and influence leaf function.
 
-## Size-structuring within the ecosystem
+## Whole-tree and ecosystem ecology
 
 **Differences across forest vertical gradients in biophysical conditions, plant traits, and metabolism scale up to affect whole-tree ecology, ecosystem ecology, and their temperature responses (Fig. `r fig_schematic`).** 
 
@@ -331,11 +331,11 @@ However, NSC reserves increase with tree size, such that larger trees have relat
 
 
 **Vertical gradients also affect the climate sensitivity of metabolism and growth.** 
-Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) than by low soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand--be these on time scales of hours, days, or seasons--tend to cause greater reductions in whole-tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table 1, @mcdowellRelationshipTreeHeight2011].
+Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) than by low soil moisture in forests not experiencing soil drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand--be these on time scales of hours, days, or seasons--tend to cause greater reductions in whole-tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table 1, @mcdowellRelationshipTreeHeight2011].
 
 The interannual climate sensitivity of annual woody growth can be determined through analysis of tree-ring increments.
 While it is generally accepted that large, exposed trees display the greatest climate sensitivity and are therefore best for climate reconstructions [@frittsTreeRingsClimate1976], only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
-These have generally found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [**Fig. `r fig_treerings`**, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021], corroborating evidence from globally disurbed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. In addition to lower drought resistance of growth, larger trees also frequently exhibit lower ability to bounce back from stress, ie. resilience [@mcgregorTreeHeightLeaf2021; @gillerotTreeNeighbourhoodDiversity2020], and greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
+These have generally found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [**Fig. `r fig_treerings`**, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021], corroborating evidence from globally disurbed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. In addition to lower drought resistance of growth, larger trees frequently exhibit lower ability to recover from stress, ie. resilience [@mcgregorTreeHeightLeaf2021; @gillerotTreeNeighbourhoodDiversity2020], and greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
 Despite the potential for shorter trees in open forests to experience greater environmental stress [@curtis_intracanopy_2019], this pattern has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraCarbonCyclingMature2021].
 
 There are, however, exceptions to the pattern of greater growth reductions under high $T_{air}$ among larger trees.
@@ -352,7 +352,7 @@ While studies partitioning transpiration across forest vertical gradients are ra
 
 ![**Figure 5.** Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from (Kunert et al. 2017). I'd like to create a parallel figure for C fluxes.](schematics/ecosystem vertical partitioning/ecosystem partitioning_updated.png)
 
-**It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but likely responses can be inferred based on the patterns and mechanisms reviewed above.** We expect that transpiration, GPP, and $ANPP_{woody}$ should all be more sensitive to high temperatures-- at least under conditions of moderate to high VPD. Increases in canopy $T_{leaf}$ are shown to reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an El Nino drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. It remains far less clear how thermal sensitivity is likely to vary across forest strata under wet conditions, but both physiological mechanisms (Fig. 3) and tree ring evidence (Fig. 4) suggests that understory trees may respond more negatively to hot, wet conditions. Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
+**It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but likely responses can be inferred based on the patterns and mechanisms reviewed above.** We expect that transpiration, GPP, and $ANPP_{woody}$ should all be sensitive to high temperatures-- at least under conditions of moderate to high VPD. Increases in canopy $T_{leaf}$ are shown to reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an El Nino drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. 3) and tree ring evidence (Fig. 4) suggests that understory trees may respond more negatively to hot, wet conditions. Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
 
 ## Implications [ & future research directions?]
 
@@ -363,15 +363,16 @@ Having established how physical conditions and biological form and function vary
 
 The complex interwoven relations between the biophysical environment and biological factors--leaf traits, metabolic processes and distribution of trees-- are likely to produce amplifications and feedback loops in a warming world, with implications for forests on many levels.  
 
+### warming
+
+Warming impacts forests, from leaf metabolism to whole forest structure. Leaf level $T_{opt}$ is closely related ecosystem $T_{opt}$. Temperature limitations to leaf processes, such as VPD and gs-limitation, can modify ecosystem $T_{opt}$ if species do not acclimate, resulting in reduced carbon sequestration [@huangAirTemperatureOptima2019; @wayJustRightTemperature2019; @tanOptimumAirTemperature2017; @bennettThermalOptimaGross2021]. At a metabolism level, leaf photosynthesis and respiration are coupled to photosynthetic thermal optima. Beyond this inflection point, photosynthesis declines whereas respiration continues to increase exponentially, eventually shifting the carbon balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. Exposed canopies are likely most vulnerable, as current growing season temperatures are equal to, or higher than photosynthetic optima of temperature and tropical forests [@slotSituTemperatureResponse2017; @mauTemperateTropicalForest2018a; @huangAirTemperatureOptima2019; @kumarathungeAcclimationAdaptationComponents2019], and leaf temperatures may  approach lethal temperatures (e.g., @osullivanThermalLimitsLeaf2017; @tiwariPhotosyntheticQuantumEfficiency2021]. A buffering effect from the canopies might allow shaded layers to photosynthesize longer in the day [Miller et al. 2021], especially if RH in the understory does not inhibit transpirational cooling.  Thermal limits are especially narrow in tropical and mid-latitudes forests (O'Sullivan et al. 2017). A daytime temperature threshold of 32 degrees C has been suggested for long term climate sensitivity of global tropical forests, where reduced growth, and increased drought and tree mortality will lead to increased carbon source than sink [O'Sullivan et al. 2020].
+In the understory, warming is disproportionately affecting the less thermally-adapted functional types, resulting in associated plant community thermophilization (Zellweger et al., 2019; Duque et al., 2015; Greiser et al. 2019). Canopy disturbance (see next section) along with a trend towards younger forests and again reduced tree growth associated with warming [McDowell et al. 2018; REFS] poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from extremes (Scheffers et al., 2013; Greiser et al. 2019). 
+
 ### canopy disturbance
 
 Canopies are crucial to microclimatic functioning, as they buffer several aspects of forest microenvironments [Zelleweger et al. 2019]. This buffering is influenced by the hydraulogical-cycle at large [Davis et al. 2019], therefore severe droughts place canopies at risk, particularly as larger trees suffer more during droughts[Bennett et al. 2015]. Further, increasing global temperatures show that canopies of temperate and tropical forests are already functioning close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. This can have implications in the tropics, where thermal limits are narrower than in temperate forests [Perez and Feeley, 2018]. 
 
 Canopy structure affects understory species composition and soil fertility, which has been shown to shift under macroclimatic warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Macroclimatic warming will disproportionately affect the less warm-adapted functional types within the forest canopy, even with buffering of climatic extremes, thereby creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), with associated understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @greiserHidingClimateCharacterizing2019]. This imposes an increasing threat to the biodiversity in microrefugias that are  otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013].
-
-### warming
-
-Warming impacts forests, from leaf metabolism to whole forest structure. At a leaf metabolism level, global analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled up to photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, thereby shifting the carbon balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. However, taken into account light-induced lower leaf respiration in the day, partionationing of carbon losses differ diurnally and seasonally across ecosystems [@keenanWidespreadInhibitionDaytime2019]. However, nitrogen that is particularly essential for plant metabolic processes has also shown to decline in forests with warming [Pam Templer et al.]. Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Further, combination of warm-season associated with increased VPD, along with drought exacerbates tree stress[@parkwilliamsTemperaturePotentDriver2013] leading to mortality [@gouldenCaliforniaForestDieoff2019], with implications for forest structure. [**to include Teskey 2015; Breashers et al. 2021**]
 
 Feedback loops from loss of big trees through natural or anthropogenic disturbance (e.g. @senfCanopyMortalityHas2018a, 2020;  @mcdowellMechanismsPlantSurvival2008; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a] would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity [@senfMappingForestDisturbance2020]. Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. 
 
