--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -365,8 +365,8 @@ The complex interwoven relations between the biophysical environment and biologi
 
 ### warming
 
-Warming impacts forests, from leaf metabolism to whole forest structure. Leaf level $T_{opt}$ is closely related ecosystem $T_{opt}$. Temperature limitations to leaf processes, such as VPD and gs-limitation, can modify ecosystem $T_{opt}$ if species do not acclimate, resulting in reduced carbon sequestration [@huangAirTemperatureOptima2019; @wayJustRightTemperature2019; @tanOptimumAirTemperature2017; @bennettThermalOptimaGross2021]. At a metabolism level, leaf photosynthesis and respiration are coupled to photosynthetic thermal optima. Beyond this inflection point, photosynthesis declines whereas respiration continues to increase exponentially, eventually shifting the carbon balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. Exposed canopies are likely most vulnerable, as current growing season temperatures are equal to, or higher than photosynthetic optima of temperature and tropical forests [@slotSituTemperatureResponse2017; @mauTemperateTropicalForest2018a; @huangAirTemperatureOptima2019; @kumarathungeAcclimationAdaptationComponents2019], and leaf temperatures may  approach lethal temperatures (e.g., @osullivanThermalLimitsLeaf2017; @tiwariPhotosyntheticQuantumEfficiency2021]. A buffering effect from the canopies might allow shaded layers to photosynthesize longer in the day [Miller et al. 2021], especially if RH in the understory does not inhibit transpirational cooling.  Thermal limits are especially narrow in tropical and mid-latitudes forests (O'Sullivan et al. 2017). A daytime temperature threshold of 32 degrees C has been suggested for long term climate sensitivity of global tropical forests, where reduced growth, and increased drought and tree mortality will lead to increased carbon source than sink [O'Sullivan et al. 2020].
-In the understory, warming is disproportionately affecting the less thermally-adapted functional types, resulting in associated plant community thermophilization (Zellweger et al., 2019; Duque et al., 2015; Greiser et al. 2019). Canopy disturbance (see next section) along with a trend towards younger forests and again reduced tree growth associated with warming [McDowell et al. 2018; REFS] poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from extremes (Scheffers et al., 2013; Greiser et al. 2019). 
+Warming impacts forests, from leaf metabolism to whole forest structure. Leaf level $T_{opt}$ is closely related ecosystem $T_{opt}$. Temperature limitations to leaf processes, such as VPD and gs-limitation, can modify ecosystem $T_{opt}$ if species do not acclimate, resulting in reduced carbon sequestration [@huangAirTemperatureOptima2019; @wayJustRightTemperature2019; @tanOptimumAirTemperature2017; @bennettThermalOptimaGross2021]. At a metabolism level, leaf photosynthesis and respiration are coupled to photosynthetic thermal optima. Beyond this inflection point, photosynthesis declines whereas respiration continues to increase exponentially, eventually shifting the carbon balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. Exposed canopies are likely most vulnerable, as current growing season temperatures are equal to, or higher than photosynthetic optima of temperature and tropical forests [@slotSituTemperatureResponse2017; @mauTemperateTropicalForest2018a; @huangAirTemperatureOptima2019; @kumarathungeAcclimationAdaptationComponents2019], and leaf temperatures may  approach lethal temperatures (e.g., @osullivanThermalLimitsLeaf2017; @tiwariPhotosyntheticQuantumEfficiency2021]. A buffering effect from the canopies might allow shaded layers to photosynthesize longer in the day [@millerOnlySunlitLeaves2021], especially if RH in the understory does not inhibit transpirational cooling.  Thermal limits are especially narrow in tropical and mid-latitudes forests [@osullivanThermalLimitsLeaf2017]. A daytime temperature threshold of 32 degrees C has been suggested for long term climate sensitivity of global tropical forests, where reduced growth, and increased drought and tree mortality will lead to increased carbon source than sink [@sullivanLongtermThermalSensitivity2020].
+In the understory, warming is disproportionately affecting the less thermally-adapted functional types, resulting in associated plant community thermophilization [@zellwegerForestMicroclimateDynamics2020; @duqueThermophilizationAdultJuvenile2015; Greiser et al. 2019]. Canopy disturbance (see next section) along with a trend towards younger forests and again reduced tree growth associated with warming [McDowell et al. 2018; REFS] poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013; Greiser et al. 2019]. 
 
 ### canopy disturbance
 
